--- a/GV/Chat.html
+++ b/GV/Chat.html
@@ -34,7 +34,7 @@
         <button id="close-popup">Close</button>
       </div>
       
-      <i class="fa-solid fa-arrow-right-from-bracket" onclick="window.location.href='/index.html'"></i>
+      <i class="fa-solid fa-arrow-right-from-bracket" onclick="window.location.href='../index.html'"></i>
     </div>
   </header>
     <div class="container">
